--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2335,7 +2335,9 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The change would not affect the customers equally. Based on the previous analysis, customers in segment 0 buys a lot of fresh food. This means if the company decreased the frequency of delivery service, it could cause trouble for these customers since fresh food might perish. On the other hand, customers in segment 1 buys more milk, grocery and detergents and paper. These products can be stored for more than one week, so a less frequent delivery might save the company money while keeping the customers in this segment satisfied. "
+    "The change would not affect the customers equally.\n",
+    "* Based on the previous analysis, customers in segment 0 buys a lot of fresh food. This means if the company decreased the frequency of delivery service, it could cause trouble for these customers since fresh food might perish. On the other hand, customers in segment 1 buys more milk, grocery and detergents and paper. These products can be stored for more than one week, so a less frequent delivery might save the company money while keeping the customers in this segment satisfied. \n",
+    "* Since these two segments of customers might react diferrently, seperate A/B test should be run on the two segments seperately. Four sample groups can be randomly chosen by choosing two sample groups from each segment. For each segment, one sample group will have the delivery service unchanged, which will be the control group, while the other group has the delivery service changed, which will be the test group. Customer satisfaction can then be surveyed to determine whether the change is positive. After that, the delivery service can be changed if the customer in a segment react to the change positively. "
    ]
   },
   {
